# milliavod

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  LICENSE  README.md  boot.sh  compose-dev.yaml  compose.yaml  config.py  karma_vods.json  milliavod.py  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  decorators.py  forms.py  models.py  routes.py
app/admin/: __init__.py  routes.py
app/auth/: routes.py
app/errors/: __init__.py  handlers.py
app/main/: forms.py  routes.py
app/static/css/: base.css
app/templates/: base.html  index.html  submit.html
app/templates/admin/: unverified_vods.html
app/templates/errors/: 401.html  403.html  404.html  500.html
migrations/versions/: 6773617a3159_initial_migration.py  8773e94a8149_making_user_table.py  ebe4299aff47_resetting_commit.py  ec0a2cc48d3c_is_admin_and_verify.py  ff332f965943_favoriting.py
nginx/: nginx.conf
tests/: conftest.py
tests/integration/: test_auth_and_users.py  test_cli.py  test_favorite.py  test_vods.py
tests/unit/: test_models.py
